--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -62,8 +62,16 @@ You are far from home. You meet a girl. It's exciting, why not? You are attracte
 
 <C.Cryptor>3226e6c2f7854f</C.Cryptor>
 
+### DANNI
 
-
+<C.Map
+  walking={[
+    '5.420885,100.343897,Fort Cornwallis',
+    '5.421882,100.342654,DANNI',
+    '5.420896,100.337566,Love Ln',
+    '5.420208,100.335220,Ryokan Muntri Boutique Hostel',
+  ]}
+/>
 
 ### BAR
 
