--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -20,6 +20,22 @@ _But she has a boyfriend so you are jealous._
 <C.Img src={'treehouse-2.jpg'} />
 <C.Imgs col={2} items={[{src: 'treehouse-1.jpg'},'treehouse-2.jpg']} />
 
+
+<C.Map aerial points={["18.983908, 99.124138"]} center={"18.983908, 99.124138"} />
+
+<C.Map
+  aerial
+  walking={[
+    '18.983908,99.124138,Rabeang Pasak Treehouse Resort',
+    '18.9869287,99.1186256,จุดชมวิวแผ่นดินหวิด',
+  ]}
+/>
+
+<C.Map
+  aerial
+  walking={['18.983908,99.124138,Rabeang Pasak Treehouse Resort', '18.981513,99.116642,.']}
+/>
+
 ## BANGKOK
 
 ## KOH TAO
