--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -38,6 +38,15 @@ _But she has a boyfriend so you are jealous._
 
 ## BANGKOK
 
+<C.Map
+  driving={[
+    '13.759380,100.498725,Lomprayah Bangkok',
+    '10.358415,99.267069,Chumphon (Lomprayah Pier)',
+    '10.084742,99.824118,Koh Tao (Mae Haad Pier)',
+]}
+/>
+
+
 ## KOH TAO
 
 <C.Img src={'crystal.jpg'} />
