--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -15,6 +15,14 @@ One night I will get the perfect photograph.
 
 ### FULLMOON PARTY
 
+<C.Map
+  driving={[
+    '10.084742,99.824118,Koh Tao (Mae Haad Pier)',
+    '9.709127,99.984432,Thong Sala',
+    '9.676993,100.068051,Haad Rin',
+]}
+/>
+
 <C.Img src={'fullmoon-1.jpg'} />
 
 ## KRABI
