--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -27,6 +27,14 @@ One night I will get the perfect photograph.
 
 ## KRABI
 
+<C.Map
+  driving={[
+    '8.042807,98.810486,Ao Nang Landmark Bus Station',
+    '7.887473,98.291399,Patong Bus Station',
+    '7.884028,98.395726,Phuket Bus Terminal 1',
+]}
+/>
+
 ## KARON
 
 ### SONGKRAN 1
