--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -39,7 +39,23 @@ One night I will get the perfect photograph.
 
 ### SONGKRAN 1
 
+#### A Free Riding
+
+<C.Map
+  driving={[
+    '7.881441,98.294236,Corner',
+    '7.844075,98.294148,Woraburi Phuket Resort & Spa',
+]}
+/>
+
 ## KOH SIMILAN 1
+
+<C.Map
+  driving={[
+    '7.844075,98.294148,Woraburi Phuket Resort & Spa',
+    '8.644964,98.251020,Khao Lak Scuba Adventures',
+]}
+/>
 
 <C.Img src={'similan.jpg'} />
 
