--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -205,6 +205,8 @@ Loi Kroh Boxing Stadium
 
 ### SIRI
 
+<Map walking={['9.5179429,100.055656,Samui Hostel', '9.5323031,100.0648453,.']} />
+
 ## BANGKOK 2
 
 ### PRATUNAM 2
