--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -205,7 +205,30 @@ Loi Kroh Boxing Stadium
 
 ### SIRI
 
-<Map walking={['9.5179429,100.055656,Samui Hostel', '9.5323031,100.0648453,.']} />
+It's the last day I stay in Phuket, it heavy rained in the morning,
+and the wind below to East which mean planes will not landing at beach side.
+Even though, I plan to walking to airport, for photos of plane.
+
+I hide under my umbrella, elude the strong wind.
+
+Rain stopped, wind direction changed! When I reached the end of the road.
+
+I leave the road and step on sand, heading airport along the beach.
+And a flood stream stopped me, my camera will die if I fall into it.
+
+<C.Map
+  walking={['8.092336,98.301914,Resort', '8.092496,98.299101,.', '8.101805,98.299957,.']}
+  points={['8.111834,98.302161']}
+/>
+
+Finally, I am at the end of runway.
+
+A A380 take off over my head, too late to get my camera.
+I watched my plane radar app and waiting for landing.
+I got some plane photos, include a beautiful B747.
+And the sky just went to warming and shinning.
+
+I did it by perseverance.
 
 ## BANGKOK 2
 
