--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -150,7 +150,9 @@ Morning, I'm riding east.
 I found a local path which have banglows along.
 I'm riding in the road and say 'hello' to everyone I saw..
 
-<C.Map walking={[ '17.0247242,99.7038567,North Gate', '17.018468,99.710928,7-Eleven' ]} />
+<C.Map walking={[
+    '17.031670,99.706329,Baan Rim Klong Resort',
+    '17.0247242,99.7038567,North Gate', '17.018468,99.710928,7-Eleven' ]} />
 
 ### ON THE ROAD
 
