--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -45,6 +45,8 @@ And she will go penang after semporna.
 
 <C.Map points={['4.2477133,118.6271726']} />
 
+<C.Map points={['4.224935,118.683287']} />
+
 <C.Img src={'mabul-1.jgp'} />
 <C.Img src={'mabul-2.jpg'} />
 
