--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -9,7 +9,7 @@ import C from '@/components';
 <C.Map
   driving={[
     '5.943993,116.050642,KKIA Terminal 2',
-    '6.0093078,116.00786,Borneo Backpackers',
+    '5.9833774,116.0776038,Borneo Backpackers',
   ]}
 />
 
@@ -101,13 +101,13 @@ Night bar, riding danger
   ]}
 />
 
-### PENANG HILL
+### PENANG HILL   
 
 <C.Map
   walking={[
     '5.423528,100.269514,Penang Hill Upper Station',
     '5.418529,100.263881,Ice cream store',
-    '5.4181686,100.2628177,Monkeys',
+    '5.4181686,100.2628177,Monkey Family',
   ]}
 />
 
