--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -22,6 +22,8 @@ Manta Queen 1 - Khao Lak - Phuket bus terminal 2, by Scuba Adventures' mini bus.
 Bus terminal - Krabi, by bus to Hat Yai, walked to Krabi town at 2 a.m.
 Awaked at 5 a.m, Lomprayah's bus terminal - Donsak Pier - Koh Phangan Thong Sala Pier - Rin Nai Beach.
 
+### THE GREAT
+
 541km, 18 hrs, of course short sleep, a carefully caculately roadmap, a great escape, what do you want?
 
 <C.Map
@@ -35,6 +37,8 @@ Awaked at 5 a.m, Lomprayah's bus terminal - Donsak Pier - Koh Phangan Thong Sala
     '9.671759,100.067371,Rin Nai',
   ]}
 />
+
+<C.Img src='pubketbusterminal2.png' />
 
 ## KOH PHANGAN 2
 
