--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -38,7 +38,7 @@ Awaked at 5 a.m, Lomprayah's bus terminal - Donsak Pier - Koh Phangan Thong Sala
   ]}
 />
 
-<C.Img src='pubketbusterminal2.png' />
+<C.Img src='pubketbusterminal2.jpg' />
 
 ## KOH PHANGAN 2
 
