--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -107,8 +107,8 @@ Soon, I arrived.
 <C.HotelNights date={'2013-10-12'} nights={2} />
 
 _It belongs to a very kind family._
-_Good place, just behind Tourist Center._
-_Minutes riding to sights._
+_Good place, just behind The Tourist Center._
+_Minutes' riding to sights._
 _I rent a bike for only 50 baht._
 _Garden house with breakfast._
 _The daughter of house owner is really beautiful._
