--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -52,6 +52,8 @@ It named "Paradise 2".
 
 ## FULLMOON PARTY 3
 
+drunkards, goats, hookers, drugsters and tourists.
+
 <C.Img src={'vicky-fish.png'} />
 
 I found a camera in the sand. I asked around, it belongs to nobody. I danced and hang camera over my head. Later, a guy found me, it's his camera. I asked him to check photos in the camera. "Yes, they are!", These must be his important memories.
