--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -91,6 +91,15 @@ Few seconds later motor with two policemen pass by, one of policeman look at us,
 
 Night bar, riding danger
 
+### BEACH
+
+<C.Map
+  driving={[
+    '5.418612,100.336421,Love Ln',
+    '5.477992,100.254231,.',
+  ]}
+/>
+
 ### NIGHT FOOD
 
 <C.Map
