--- a/src/pages/docs/english/pronunciation.mdx
+++ b/src/pages/docs/english/pronunciation.mdx
@@ -6,212 +6,212 @@ _IPA88_
 
 ## /iː/
 
-- fleece /fliːs/
-- sea /siː/
-- machine /məˈʃiːn/
+- fleece
+- sea
+- machine
 
 ## /iː/ and /ɪ/
 
-- litre /ˈliːtə/, litter /ˈlɪtə/
-- cheap /tʃiːp/, chip /tʃɪp/
-- feet /fiːt/, fit /fɪt/
-- he's /hiːz/, his /hɪz/
-- peach /piːtʃ/, pitch /pɪtʃ/
-- sheep /ʃiːp/, ship /ʃɪp/
+- litre, litter
+- cheap, chip
+- feet, fit
+- he's, his
+- peach, pitch
+- sheep, ship
 
 ## /uː/
 
-- goose /ɡuːs/
-- two /tuː/
-- blue /bluː/
-- group /gruːp/
+- goose
+- two
+- blue
+- group
 
 ## /aː/
 
-- father /ˈfɑːðə/
-- start /staːt/
-- hard /haːd/
+- father
+- start
+- hard
 
 ## /ɔː/
 
-- thought /θɔːt/
-- law /lɔː/
-- north /nɔːθ/
-- war /wɔː/
+- thought
+- law
+- north
+- war
 
 ## /ɜː/
 
-- nurse /nɜːs/
-- stir /stɜː/
-- learn /lɜːn/
-- refer /riˈfɜː/
+- nurse
+- stir
+- learn
+- refer
 
 ## /ɪə/
 
-- ear /ɪə/
-- near /nɪə/
-- hear /hɪə/
-- weary /ˈwɪəri/
+- ear
+- near
+- hear
+- weary
 
 ## /ʊə/
 
-- tour /tʊə/
-- pure /pjʊə/
-- cure /kjʊə/
+- tour
+- pure
+- cure
 
 ## /aɪ/
 
-- eye /aɪ/
-- price /praɪs/
-- high /haɪ/
-- try /traɪ/
+- eye
+- price
+- high
+- try
 
 ## /ɔɪ/
 
-- choice /tʃɔɪs/
-- noise /nɔɪz/
-- boy /bɔɪ/
+- choice
+- noise
+- boy
 
 ## /əʊ/
 
-- boat /bəʊt/
-- show /ʃəʊ/
-- know /nəʊ/
+- boat
+- show
+- know
 
 ## /əʊ/ and /ɔː/
 
-- coat /kəʊt/, caught /kɔːt/
-- dough /dəʊ/, door /dɔː/
-- sew /səʊ/, saw /sɔː/
-- flow /fləʊ/, floor /flɔː/
+- coat, caught
+- dough, door
+- sew, saw
+- flow, floor
 
 ## /eə/
 
-- air /eə/
-- square /skweə/
-- fair /feə/
-- pair /peə/
+- air
+- square
+- fair
+- pair
 
 ## /eə/ and /æ/
 
-- dared /deəd/, dad /dæd/
-- glared /gleəd/, glad /glæd/
-- Mary /ˈMeəri/, marry /ˈmæri/
+- dared, dad
+- glared, glad
+- Mary, marry
 
 ## /aʊ/
 
-- mouth /maʊθ/
-- now /naʊ/
-- fowl /faʊl/
+- mouth
+- now
+- fowl
 
 ## /aʊ/ and /əʊ/
 
-- couch /kaʊtʃ/, coach /kəʊtʃ/
-- clown /klaʊn/, clone /kləʊn/
-- loud /laʊd/, load /ləʊd/
-- found /faʊnd/ , phoned /fəʊnd/
+- couch, coach
+- clown, clone
+- loud, load
+- found , phoned
 
 ## /eɪ/
 
-- face /feɪs/
-- day /deɪ/
-- break /breɪk/
+- face
+- day
+- break
 
 ## /eɪ/ and /iː/
 
-- ate /eɪt/, eat /iːt/
-- faced /feɪst/, feast /fiːst/
-- great /greɪt/, greet /griːt/
-- mate /meɪt/, meet /miːt/
+- ate, eat
+- faced, feast
+- great, greet
+- mate, meet
 
 ## /p/
 
-- pack /pæk/
-- pan /pæn/
-- copy /ˈkɒpi/
-- happen /ˈhæpən/
-- hop /hɒp/
-- pop /pɒp/
+- pack
+- pan
+- copy
+- happen
+- hop
+- pop
 
 ## /p/ and /b/
 
-- pack /pæk/, back /bæk/
-- punch /pʌntʃ/, bunch /bʌntʃ/
-- pump /pʌmp/, bump /bʌmp/
-- pull /pʊl/, bull /bʊl/
+- pack, back
+- punch, bunch
+- pump, bump
+- pull, bull
 
 ## /t/
 
-- tin /tɪn/
-- button /ˈbʌtn/
-- get /get/
-- tight /taɪt/
+- tin
+- button
+- get
+- tight
 
 ## /t/ and /d/
 
-- tin /tɪn/, din /dɪn/
-- to /tuː/, do /duː/
-- town /taʊn/, down /daʊn/
-- eight /eɪt/, aid /eɪd/
-- bet /bet/, bed /bed/
+- tin, din
+- to, do
+- town, down
+- eight, aid
+- bet, bed
 
 ## /tʃ/
 
-- choke /tʃəʊk/
-- teacher /ˈtiːtʃə/
-- match /mætʃ/
-- church /tʃɜːtʃ/
+- choke
+- teacher
+- match
+- church
 
 ## /tʃ/ and /dʒ/
 
-- choke /tʃəʊk/, joke /dʒəʊk/
-- chunk /tʃʌŋk/, junk /dʒʌŋk/
-- rich /rɪtʃ/, ridge /rɪdʒ/
-- lunch /lʌntʃ/, lunge /lʌndʒ/
+- choke, joke
+- chunk, junk
+- rich, ridge
+- lunch, lunge
 
 ## /k/
 
-- came /keɪm/
-- lucky /ˈlʌki/
-- sick /sɪk/
-- clock /klɒk/
+- came
+- lucky
+- sick
+- clock
 
 ## /k/ and /g/
 
-- came /keɪm/, game /ɡeɪm/
-- back /bæk/, bag /bæɡ/
-- cage /keɪdʒ/, gauge /ɡeɪdʒ/
-- calories /ˈkæləriz/, galleries /ˈgæləriz/
+- came, game
+- back, bag
+- cage, gauge
+- calories, galleries
 
 ## /f/
 
-- fat /fæt/
-- coffee /ˈkɒfi/
-- rough /rʌf/
-- fluff /flʌf/
+- fat
+- coffee
+- rough
+- fluff
 
 ## /f/ and /v/
 
-- fan /fæn/, van /væn/
-- leaf /liːf/, leave /liːv/
-- off /ɒf/, of /ɒv/
-- rifle /ˈraɪfl/, rival /ˈraɪvl/
+- fan, van
+- leaf, leave
+- off, of
+- rifle, rival
 
 ## /θ/
 
-- thin /θɪn/
-- throw /θrəʊ/
-- thumb /θʌm/
-- author /ˈɔːθə/
-- healthy /ˈhelθi/
-- birth /bɜːθ/
-- path /pɑːθ/
+- thin
+- throw
+- thumb
+- author
+- healthy
+- birth
+- path
 
 ## /s/
 
-- soon /suːn/
-- mr /mɪstə/
-- hiss /hɪs/
-- cease /siːs/
+- soon
+- mr
+- hiss
+- cease
 
 </AutoSpeak>
