--- a/src/pages/docs/english/pronunciation.mdx
+++ b/src/pages/docs/english/pronunciation.mdx
@@ -214,4 +214,20 @@ _IPA88_
 - hiss
 - cease
 
+## /s/ and /z/
+
+- hiss, his
+- course, cause
+- place, plays
+- gross, grows
+
+## /ʃ/
+- ship
+- sure
+- nation
+- fish
+- shush
+
+48
+
 </AutoSpeak>
