--- a/src/pages/docs/english/first100words.mdx
+++ b/src/pages/docs/english/first100words.mdx
@@ -2,7 +2,7 @@ import AutoSpeak from '@/components/auto-speak';
 
 <AutoSpeak>
 
-apple, banana, baby, duck, chair, cat, dog, sippy cup, flower, bear, ball, car
+- apple, banana, baby, duck, chair, cat, dog, sippy cup, flower, bear, ball, car
 colored paints, green pear, red shoes, orange fish, pink flower
 yellow duckling, blue ball, white rabbit, black burtons, purple tricycle
 dump truck, tractor, truck, motorcycle, car, fire engine, airplane, ship, train
