--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -48,6 +48,12 @@ It named "Paradise 2".
 
 <C.Map aerial zoom={15} points={['4.250431,118.630882']} />
 
+### Kapalai
+
+<C.Img src={'00005170-0001.jpg'} />
+
+<C.Img src={'00025100-0002.jpg'} />
+
 ## KOH SAMUI
 
 ## FULLMOON PARTY 3
