--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -25,6 +25,8 @@ One night I will get the perfect photograph.
 
 <C.Img src={'fullmoon-1.jpg'} />
 
+<C.Img src={'fullmoon-2.jpg'} />
+
 ## KRABI
 
 <C.Map
