--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -27,6 +27,10 @@ One night I will get the perfect photograph.
 
 <C.Img src={'fullmoon-2.jpg'} />
 
+<C.CImg src={'G0281605.jpg'} />
+
+<C.CImg src={'G0281606.jpg'} />
+
 ## KRABI
 
 <C.Map
@@ -62,5 +66,7 @@ One night I will get the perfect photograph.
 <C.Img src={'similan.jpg'} />
 
 <C.CImg src={'P1010987.jpg'} />
+
+<C.CImg src={'G0032734.jpg'} />
 
 ## BANGKOK
