--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -4,7 +4,7 @@ import C from '@/components';
 
 ## BANGKOK
 
-<C.Img src={'baiyokesky-1.jpg'} />
+<C.Img src={'_DSC0001.jpg'} />
 
 13.7537798,100.5421587
 
@@ -12,6 +12,8 @@ import C from '@/components';
 
 You think I waste time taking photographs of the sky.
 One night I will get the perfect photograph.
+
+<C.CImg src={'2015-04-08-120444.jpg'} />
 
 ### FULLMOON PARTY
 
@@ -31,6 +33,10 @@ One night I will get the perfect photograph.
 
 <C.CImg src={'G0281606.jpg'} />
 
+<C.CImg src={'2015-04-11-180042.jpg'} />
+
+<C.CImg src={'2015-04-06-182934.jpg'} />
+
 ## KRABI
 
 <C.Map
@@ -40,6 +46,8 @@ One night I will get the perfect photograph.
     '7.844075,98.294148,Woraburi Phuket Resort & Spa',
 ]}
 />
+
+<C.Img src={'2015-04-09-162348.jpg'} />
 
 ## KARON
 
