--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -60,7 +60,7 @@ It named "Paradise 2".
 
 drunkards, goats, hookers, drugsters and tourists.
 
-<C.Img src={'vicky-fish.png'} />
+<C.Img src={'vicky-fish.jpg'} />
 
 I found a camera in the sand. I asked around, it belongs to nobody. I danced and hang camera over my head. Later, a guy found me, it's his camera. I asked him to check photos in the camera. "Yes, they are!", These must be his important memories.
 
@@ -71,6 +71,8 @@ After that I took speed boat back to KOH SAMUI.
 ## SONGKRAN 205X
 
 <C.Map walking={['9.5179429,100.055656,Samui Hostel', '9.5323031,100.0648453,.']} />
+
+<C.CImg src={'bitch.jpg'} />
 
 green dreadlocks on party
 
@@ -113,3 +115,4 @@ green dreadlocks in dark
 <br />
 
 <C.CImg src="IMG_20170413_234141.jpg" strict />
+
