--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -4,7 +4,7 @@ import C from '@/components';
 
 ## BANGKOK
 
-<C.Img src={'_DSC0001.jpg'} />
+<C.Img src={'DSC0001.jpg'} />
 
 13.7537798,100.5421587
 
