--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -140,7 +140,7 @@ _๑ ๒ ๓ ๔ ๕ ๖ ๗ ๘ ๙ ๑๐_
 They teach me how to count in thai.
 That have a lot of funny.
 
-<C.Img src={'_DSC2996.jpg'} />
+<C.Img src={'DSC2996.jpg'} />
 
 ### MORNING
 
