--- a/src/pages/docs/video/ffmpeg.mdx
+++ b/src/pages/docs/video/ffmpeg.mdx
@@ -1,17 +1,3 @@
 ```
-ffmpeg -i test.h264 -vcodec copy test.h264
+ffmpeg -i The.Last.Emperor.1987.EXTENDED.BluRay.1080p.DTS.x264-CHD.mkv -vcodec copy -acodec copy -ss 01:49:42 -to 01:53:51 tes2t.mkv
 ```
-
-```
-ffmpeg -i test.h264 -vcodec h264 -preset placebo test.mp4
-```
-
-`ultrafast`, `superfast`, `veryfast`,`faster`, `fast`, `medium`, `slow`, `slower`, `veryslow`, `placebo`
-
-`-i` _url (input)_  
-input file url
-
-`-f` _fmt (input/output)_  
-Force input or output file format. The format is normally auto detected for input files and guessed from the file extension for output files, so this option is not needed in most cases.
-
-`-codec copy` or `-codec: copy` would copy all the streams without reencoding.
