--- a/src/pages/docs/video/ffmpeg.mdx
+++ b/src/pages/docs/video/ffmpeg.mdx
@@ -1,3 +1,5 @@
+
+```bash
+ffmpeg -i x.mkv -vcodec copy -acodec copy -ss 00:00 -to 00:01 x.mkv
 ```
-ffmpeg -i The.Last.Emperor.1987.EXTENDED.BluRay.1080p.DTS.x264-CHD.mkv -vcodec copy -acodec copy -ss 01:49:42 -to 01:53:51 tes2t.mkv
-```
+https://github.com/chiaweilee/shui/blob/main/ffmpeg_ssto.sh
