--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -4,27 +4,27 @@ import C from '@/components';
 
 ## BANGKOK 1
 
-_Bangkok, good-time city. Gateway to Southeast Asia. Where dollars and Duetsmarks get turned into counterfeit watches and genuine scars._
+> _Bangkok, good-time city. Gateway to Southeast Asia. Where dollars and Duetsmarks get turned into counterfeit watches and genuine scars._
 
-_"You need somewhere to stay?"_
+> _"You need somewhere to stay?"_
 
-_"I'll be Ok, thanks."_
+> _"I'll be Ok, thanks."_
 
-_"What do you want? Sell passport? Tickets? You want silk? I'll take you to the best silk place? Diamonds? Come with me, get presents for girlfriend. Maybe no girlfriend. You want a girl, no problem. Good time. Boy girl fucking no problem..."_
+> _"What do you want? Sell passport? Tickets? You want silk? I'll take you to the best silk place? Diamonds? Come with me, get presents for girlfriend. Maybe no girlfriend. You want a girl, no problem. Good time. Boy girl fucking no problem..."_
 
-_I was traveling alone for two
+> _I was traveling alone for two
 reasons. First of all, being alone
 allows you more opportunity to
 absorb your experiences on a
 personal level._
-_Secondly, and this
+> _Secondly, and this
 I felt acutely at that moment,
 there was no one who wanted to go
 with me._
 
-_What are you doing in thailand? Tourist? You go to Patpong? See smoke from pussy, ping pong ball from pussy, razor blade from pussy; bird from pussy. Why not? Thai girls best in the world. Thai food best in the world. Thai dope best in the world._
+> _What are you doing in thailand? Tourist? You go to Patpong? See smoke from pussy, ping pong ball from pussy, razor blade from pussy; bird from pussy. Why not? Thai girls best in the world. Thai food best in the world. Thai dope best in the world._
 
-_- The Beach, 2000_
+> _- The Beach, 2000_
 
 <C.Img src={'yinjiaoqin1.jpg'} alt="https://www.instagram.com/p/B02HcpUpO84/" />
 
@@ -106,15 +106,15 @@ Soon, I arrived.
 
 <C.HotelNights date={'2013-10-12'} nights={2} />
 
-_It belongs to a very kind family._
-_Good place, just behind The Tourist Center._
-_Minutes' riding to sights._
-_I rent a bike for only 50 baht._
-_Garden house with breakfast._
-_The daughter of house owner is really beautiful._
-_I still remember the golden doggy Latu and the pussy Momo._
+> _It belongs to a very kind family._
+> _Good place, just behind The Tourist Center._
+> _Minutes' riding to sights._
+> _I rent a bike for only 50 baht._
+> _Garden house with breakfast._
+> _The daughter of house owner is really beautiful._
+> _I still remember the golden doggy Latu and the pussy Momo._
 
-_- My review on agoda.com_
+> _- My review on agoda.com_
 
 After meal, the day just black out. And I can't recognize the way back in the black. The sense of direction told me I should ride to north. And I am far away from main road.
 
