--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -6,13 +6,13 @@ import C from '@/components';
 
 ## CHIANG MAI
 
-_You are far from home._
-_You meet a girl._
-_It's exciting, why not?_
-_You are attracted to her - it's in your eyes._
-_Perhaps in hers as well._
-_So you think something might happen; it's easy to believe, it's exciting._
-_But she has a boyfriend so you are jealous._
+> _You are far from home._
+> _You meet a girl._
+> _It's exciting, why not?_
+> _You are attracted to her - it's in your eyes._
+> _Perhaps in hers as well._
+> _So you think something might happen; it's easy to believe, it's exciting._
+> _But she has a boyfriend so you are jealous._
 
 ### TREE HOUSES
 
