--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -112,6 +112,8 @@ Night bar, riding danger
 
 ### PENANG HILL   
 
+<C.Img src={'s6.jpg'} />
+
 <C.Map
   walking={[
     '5.423528,100.269514,Penang Hill Upper Station',
