--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -33,6 +33,12 @@ One night I will get the perfect photograph.
 
 <C.CImg src={'G0281606.jpg'} />
 
+<C.Img src={'s3.jpg'} />
+
+<C.Img src={'s4.jpg'} />
+
+<C.Img src={'s5.jpg'} />
+
 <C.CImg src={'2015-04-11-180042.jpg'} />
 
 <C.CImg src={'2015-04-06-182934.jpg'} />
