--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -46,6 +46,8 @@ Paradise but not Sipadan, located just off shore Mabul Island. Minutes away from
 
 It named "Paradise 2".
 
+<C.Img src={'s1.jpg'} />
+
 <C.Map aerial zoom={15} points={['4.250431,118.630882']} />
 
 ### Kapalai
@@ -68,7 +70,9 @@ Middle night, where the music from the beach party is audible, a couple that we 
 
 After that I took speed boat back to KOH SAMUI.
 
-## SONGKRAN 205X
+## SONGKRAN 2561
+
+<C.Img src={'s2.jpg'} />
 
 <C.Map walking={['9.5179429,100.055656,Samui Hostel', '9.5323031,100.0648453,.']} />
 
