--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -39,6 +39,14 @@ import C from '@/components';
 
 ## Swimming
 
+<C.Map
+  points={['18.7979829,98.9660400']}
+/>
+
+Baan Thai Apartment
+
+
+
 ## BANGKOK
 
 <C.Map
