--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -29,11 +29,17 @@ One night I will get the perfect photograph.
 
 <C.Img src={'fullmoon-2.jpg'} />
 
+<C.Img src={'00009150.jpg'} />
+
+<C.Img src={'00009213.jpg'} />
+
 <C.Img src={'s3.jpg'} />
 
 <C.Img src={'s4.jpg'} />
 
 <C.Img src={'s5.jpg'} />
+
+<C.Img src={'00008507.jpg'} />
 
 <C.CImg src={'G0281605.jpg'} />
 
