--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -49,6 +49,8 @@ One night I will get the perfect photograph.
 
 <C.CImg src={'2015-04-06-182934.jpg'} />
 
+I lost her glass on this party.
+
 ## KRABI
 
 <C.Map
