--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -193,7 +193,12 @@ _#SARA#_
 Loi Kroh Boxing Stadium
 
 <C.Cryptor>363aeb</C.Cryptor>, her name.
-<C.CImg src="mob.jpg" />
+
+<C.Img src={'_DSC3276.jpg'} />
+
+<C.Img src={'_DSC3279.jpg'} />
+
+<C.Img src={'_DSC3280.jpg'} />
 
 ### LUCKY
 
