--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -194,11 +194,11 @@ Loi Kroh Boxing Stadium
 
 <C.Cryptor>363aeb</C.Cryptor>, her name.
 
-<C.Img src={'_DSC3276.jpg'} />
+<C.Img src={'DSC3276.jpg'} />
 
-<C.Img src={'_DSC3279.jpg'} />
+<C.Img src={'DSC3279.jpg'} />
 
-<C.Img src={'_DSC3280.jpg'} />
+<C.Img src={'DSC3280.jpg'} />
 
 ### LUCKY
 
