--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -26,10 +26,6 @@ with me._
 
 > _- The Beach, 2000_
 
-<C.Img src={'yinjiaoqin1.jpg'} alt="https://www.instagram.com/p/B02HcpUpO84/" />
-
-<C.Imgs items={[{src: 'yinjiaoqin1.jpg'},{src: 'yinjiaoqin1.jpg'},{src: 'yinjiaoqin1.jpg'}]} />
-
 ### PRATUNAM
 
 #### BAIYOKE SUITE HOTEL
@@ -194,11 +190,7 @@ Loi Kroh Boxing Stadium
 
 <C.Cryptor>363aeb</C.Cryptor>, her name.
 
-<C.Img src={'DSC3276.jpg'} />
-
-<C.Img src={'DSC3279.jpg'} />
-
-<C.Img src={'DSC3280.jpg'} />
+<C.Imgs items={[{src: 'DSC3276.jpg'},{src: 'DSC3279.jpg'},{src: 'DSC3280.jpg'}]} />
 
 ### LUCKY
 
