--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -87,6 +87,9 @@ I lost her glass on this party.
 
 <C.Img src={'similan.jpg'} />
 
+<C.Img src={'00002032.jpg'} />
+<C.Imgs col={2} items={[{src: '00002026.jpg'},{src: '00002034.jpg'}]} />
+
 <C.CImg src={'P1010987.jpg'} />
 
 <C.CImg src={'G0032734.jpg'} />
