--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -23,6 +23,10 @@ Fall in love by riding. They just stay near by my hostel.
 
 <C.Map points={['5.9834548,116.0775237']} />
 
+<C.Img src={'00003135.jpg'} />
+<C.Img src={'00003180.jpg'} />
+
+
 ## MABUL 1
 
 My phone out of power after landing. I found a sim card store for charging.
@@ -49,6 +53,8 @@ And she will go penang after semporna.
 
 <C.Img src={'mabul-1.jpg'} />
 <C.Img src={'mabul-2.jpg'} />
+
+<C.Img src={'00003434.jpg'} />
 
 ## KOTA KINABALU 2
 
