--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -30,6 +30,8 @@ import C from '@/components';
 
 <C.Img src={'treehouse-4.jpg'} />
 
+<C.Img src={'00002369.jpg'} />
+
 <C.Map
   aerial
   walking={['18.983908,99.124138,Rabeang Pasak Treehouse Resort', '18.981513,99.116642,.']}
