--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -172,21 +172,32 @@ I'm riding in the road and say 'hello' to everyone I saw..
 
 ### SARA
 
-I'm told that most single girls here are looking for Farangs,
+> _I'm told that most single girls here are looking for Farangs,
 thai girls learn about "Farangs" when they are small.
 If one finds a Farangs boyfriend or husband, who is willing to pay on her behalf.
-She can build a big house back home. A "Farangs" is a simply a "sugar daddy" to them.
+She can build a big house back home. A "Farangs" is a simply a "sugar daddy" to them._
 
 <C.Img src={'sara.jpg'} />
 
-_#SARA#_
+> _ - SARA, 2015_
 
 <C.Map points={['18.7840584,98.9978128,16']} />
 Loi Kroh Boxing Stadium
 
+Girls, drinkers and boxers..
+Her sisters and she stood on my way and asking me wanna a drink when I am trying to get out.
+She caught my eyes, a pure cute young face.
+
 <C.Cryptor>363aeb</C.Cryptor>, her name.
 
 <C.Imgs items={[{src: 'DSC3276.jpg'},{src: 'DSC3279.jpg'},{src: 'DSC3280.jpg'}]} />
+
+It became the only way I can forget loneliness.
+I came here everynight to dream? No, I came to be woken up.
+The dream had became my reality.
+
+The night before I leave Chiangmai, I cried.
+Say goodbye to my "first love" in the music of <Every Breath You Take>.
 
 ### LUCKY
 
