--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -81,6 +81,8 @@ You are far from home. You meet a girl. It's exciting, why not? You are attracte
   ]}
 />
 
+<C.Img src={'1611500484268.jpg'} />
+
 ### BAR
 
 <C.Map
@@ -115,6 +117,8 @@ Night bar, riding danger
     '5.416457,100.332673,Kimberley Street Food Night Market',
   ]}
 />
+
+<C.Img src={'1611158680144.jpg'} />
 
 ### PENANG HILL   
 
