--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -197,7 +197,7 @@ I came here everynight to dream? No, I came to be woken up.
 The dream had became my reality.
 
 The night before I leave Chiangmai, I cried.
-Say goodbye to my "first love" in the music of <Every Breath You Take>.
+Say goodbye to my "first love" in the music of `Every Breath You Take`.
 
 ### LUCKY
 
