--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -56,6 +56,10 @@ And she will go penang after semporna.
 
 <C.Img src={'00003434.jpg'} />
 
+<C.Img src={'1611278053015.jpg'} />
+<C.Img src={'mmexport1611412061154.jpg'} />
+<C.Img src={'mmexport1611411982058.jpg'} />
+
 ## KOTA KINABALU 2
 
 ### MAEILYNE
