--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -52,7 +52,8 @@ And she will go penang after semporna.
 <C.Map points={['4.224935,118.683287']} />
 
 <C.Img src={'mabul-1.jpg'} />
-<C.Img src={'mabul-2.jpg'} />
+<C.Imgs col={3} items={[{src: 'mabul-2.jpg'},{src: '00023265.jpg'},{src: '00023266.jpg'}]} />
+<C.Imgs col={2} items={[{src: '00023183.jpg'},{src: '00023184.jpg'}]} />
 
 <C.Img src={'00003434.jpg'} />
 
