--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -90,6 +90,10 @@ I lost her glass on this party.
 <C.Img src={'00002032.jpg'} />
 <C.Imgs col={2} items={[{src: '00002026.jpg'},{src: '00002034.jpg'}]} />
 
+<C.Img src={'00009518.jpg'} />
+<C.Img src={'00009523.jpg'} />
+
+
 <C.CImg src={'P1010987.jpg'} />
 
 <C.CImg src={'G0032734.jpg'} />
